# osz

./: .gitignore  CMakeLists.txt  README.md  enter.kconfig
.clinerules/: 01_gen_tc_framwork.md  02_gen_tc_code.md
.clinerules/st/: 03_gen_st_tc_framwork.md  04_gen_st_tc_code.md
.clinerules/ut/: 01_gen_ut_tc_framwork.md  02_gen_ut_tc_code.md
arch/: CMakeLists.txt  Kconfig
arch/riscv/: CMakeLists.txt  Makefile  config.mk
construct/: Makefile  build_cmake.sh  build_make.sh
construct/cmake/: cfg.cmake  comm.cmake  global_var.cmake  module.cmake  riscv32_toolchain.cmake
construct/config/: osz.config
construct/make/: cfg.mk  comm.mk
construct/script/: env.sh  gdbinit  kill_qemu.sh  parser_cfg.py
doc/: strncmp实现.md
doc/compile_doc/: compile_tool_config.md
doc/kernel_doc/: bugs.md  shell.md  startup.md
doc/libc_doc/: strlen实现.md  strncpy实现.md
kernel/: CMakeLists.txt  Kconfig
kernel/base/: CMakeLists.txt
kernel/comm/: CMakeLists.txt  Makefile  config.mk
kernel/debug/: CMakeLists.txt  Makefile  config.mk
kernel/dfx/: CMakeLists.txt  Makefile  config.mk
kernel/drivers/: CMakeLists.txt
kernel/shell/: CMakeLists.txt  Kconfig  Makefile  config.mk
kernel/startup/: CMakeLists.txt  Makefile  start.S
kernel/struct/: config.mk  (+1 more)
platform/: Kconfig
targets/: CMakeLists.txt  Kconfig  Makefile
test/: Makefile  test.c  test.h  test_base_operator.c  test_dlink.c  test_interrupt.c  test_mem.c  test_mip.c  test_mtime.c  test_pri_queue.c  test_printf.c  test_sched.c  test_timer.c  test_trap.c  test_uart.c
test_suite/: Makefile
tools/: toolchain
(+200 files in other folders)
